--- a/config/.env
+++ b/config/.env
@@ -3,3 +3,8 @@ EMAIL_HOST='smtp.mailtrap.io'
 EMAIL_HOST_USER='eugenshow83@gmail.com'
 EMAIL_HOST_PASSWORD='14c4c8e06e244c'
 EMAIL_PORT='2525'
+NAME='postgres'
+USER='postgres'
+POSTGRES_PASSWORD='admin'
+HOST='dm_db'
+PORT='5432'
