--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,47 @@
 version: '3.7'
 
 services:
+  redis:
+    image: 'bitnami/redis:latest'
+    environment:
+      - ALLOW_EMPTY_USERNAME=yes
+      - ALLOW_EMPTY_PASSWORD=yes
   dm_db:
     image: postgres:10.1-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+    restart: always
+    networks:
+      - app-network
+      - api-network
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
+    ports:
+      - 5436:5432
   dm_web:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
+#    command:
+#      python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/urs/app/Test
     ports:
       - 8000:8000
     depends_on:
       - dm_db
+      - redis
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
+    networks:
+      - app-network
+      - api-network
 volumes:
   postgres_data:
+
+
+networks:
+  app-network:
+    driver: bridge
+  api-network:
+    external: true
