--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appnope==0.1.2
 argon2-cffi==21.1.0
 asgiref==3.4.1
+async-timeout==4.0.2
 attrs==21.2.0
 backcall==0.2.0
 backports.entry-points-selectable==1.1.1
@@ -23,6 +24,7 @@ cycler==0.11.0
 debugpy==1.4.1
 decorator==5.0.9
 defusedxml==0.7.1
+Deprecated==1.2.13
 distlib==0.3.3
 Django==3.2.12
 django-cors-headers==3.11.0
@@ -30,6 +32,7 @@ django-environ==0.8.1
 django-extensions==2.2.9
 django-filter==21.1
 django-nose==1.4.6
+django-redis==5.2.0
 django-templated-mail==1.1.1
 django-timedeltafield==0.7.10
 djangorestframework==3.13.1
@@ -74,6 +77,7 @@ matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mistune==0.8.4
 msgpack==1.0.3
+msgpack-python==0.5.6
 nbclient==0.5.4
 nbconvert==6.1.0
 nbformat==5.1.3
@@ -147,4 +151,5 @@ virtualenvwrapper==4.8.4
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
+wrapt==1.14.0
 zipp==3.7.0
