--- a/config/.env
+++ b/config/.env
@@ -6,5 +6,6 @@ EMAIL_PORT='2525'
 NAME='postgres'
 USER='postgres'
 POSTGRES_PASSWORD='admin'
-HOST='dm_db'
+HOST='localhost'
 PORT='5432'
+REDIS_HOST = 'redis://cache:6379/1'
